Final first init

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
 
+    <span class="header-span">
+        <h1>COVID-19 SPAN ELEMENT</h1>
+    </span>
+
     <div class="container">
         <div class="a">
             <svg class="gingerlogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300">
