--- a/index.html
+++ b/index.html
@@ -63,9 +63,19 @@
             </div>
         </div>
         <div class="d">
-            <p>Coiffeur Ginger GmbH
-                Spitalgasse 5
-                8400 Winterthur</p>
+            <div class="contact-container">
+                <div class="contactbox"></div>
+                <p>Öffnungszeiten</p>
+                <div class="contactbox">
+                    <p>Telefon</p>
+                    <p>044 123 123</p>
+                </div>
+                <div class="contactbox">
+                    <p>Coiffeur Ginger GmbH</p>
+                    <p>Spitalgasse 5</p>
+                    <p>8400 Winterthur</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
