--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
     <span class="header-span">
-        <h1>COVID-19 SPAN ELEMENT</h1>
+        <h1>COVID-19 SPAN ELEMENT</h1><span class="close">
+            <h1>X</h1>
+        </span>
     </span>
 
     <div class="container">
@@ -60,14 +62,24 @@
                     <path class="a"
                         d="M10.81 13.12A2 2 0 0 0 8.7 15a2 2 0 0 0 2.11 1.93A2 2 0 0 0 12.92 15a2 2 0 0 0-2.11-1.88zM66.23.93h-5.64v18.53h5.64c7.94 0 11.46-3.59 11.46-9.16S74.46.93 66.23.93zm.19 15.76h-2.2V3.7h2.19c5.87 0 8.07 2.56 8.07 6.6s-2.34 6.38-8.07 6.38z" />
                 </svg>
+                <p>
+                    AVEDA HAT ES SICH ZUM ZIEL GESETZT, SORGSAM UND RESPEKTVOLL MIT DER UMWELT UMZUGEHEN. DIESE
+                    PHILOSOPHIE KOMMT SOWOHL IN UNSEREN PRODUKTEN ALS AUCH IN UNSEREM BEMÜHEN UM DAS WOHLERGEHEN DER
+                    MITMENSCHEN ZUM AUSDRUCK. AVEDA WILL IM VERANTWORTUNGSBEWUSSTEN UMGANG MIT DER NATUR UND IHREN
+                    RESSOURCEN EINE FÜHRUNGSROLLE ÜBERNEHMEN - NICHT NUR IN DER WELT DER KOSMETIK, SONDERN AUCH ZUGUSTEN
+                    DER WELT, IN DER WIR LEBEN.
+                    <br>
+                    <br>
+                    HORST RECHELBACHER, GRÜNDER
+                </p>
             </div>
         </div>
         <div class="d">
             <div class="contact-container">
-                <div class="contactbox"></div>
-                <p>Öffnungszeiten</p>
                 <div class="contactbox">
-                    <p>Telefon</p>
+                    <p></p>
+                </div>
+                <div class="contactbox">
                     <p>044 123 123</p>
                 </div>
                 <div class="contactbox">
@@ -77,7 +89,152 @@
                 </div>
             </div>
         </div>
+
+        <div class="e">
+            <div class="invo-container">
+                <div class="invobox">
+                    <svg version="1.1" class="invosvg" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 307.5 307.5"
+                        style="enable-background:new 0 0 307.5 307.5;" xml:space="preserve">
+                        <path
+                            d="M240.983,95.805l29.272-29.272c6.442-6.441,9.99-15.007,9.99-24.117c0-9.109-3.548-17.675-9.982-24.109l-0.388-0.388
+                        c-13.296-13.297-34.934-13.297-48.233,0l-77.886,77.887H0v51.463c0,83.972,68.316,152.287,152.288,152.287h2.925
+                        c83.972,0,152.287-68.315,152.287-152.287V95.805H240.983z M232.248,28.525c7.449-7.449,19.572-7.45,27.014-0.007l0.388,0.388
+                        c3.608,3.608,5.596,8.406,5.596,13.509c0,5.104-1.987,9.901-5.597,13.51l-39.88,39.88h-54.799L232.248,28.525z M15,110.805h113.756
+                        l-21.878,21.878l10.606,10.607l32.485-32.485H292.5v36.463c0,13.24-1.89,26.046-5.404,38.169H156.809l40.995-40.994l-10.607-10.607
+                        l-51.602,51.602H20.404C16.89,173.314,15,160.508,15,147.268V110.805z M155.213,284.555h-2.925
+                        c-56.859,0-105.753-34.746-126.571-84.118h256.067C260.965,249.809,212.071,284.555,155.213,284.555z" />
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                    </svg>
+                    <h2>Inhaltsstoffe</h2>
+                    <br></br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugiat accusamus nisi amet.
+                        Laudantium, minima quos officia porro repudiandae similique, aperiam beatae debitis ullam et
+                        consequatur natus! Aut, sed ad!</p>
+                </div>
+                <div class="invobox">
+                    <svg version="1.1" class="invosvg" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 305.189 305.189"
+                        style="enable-background:new 0 0 305.189 305.189;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M289.637,188.952c-11.114-11.115-29.352-11.271-40.656-0.352l-26.721,25.813c-0.039,0.037-0.077,0.075-0.114,0.112
+                                c-10.102,10.113-23.538,15.682-37.833,15.682h-6.205c0.041-0.35,0.069-0.705,0.069-1.066v-3.549l0.692-0.303
+                                c0.234-0.102,0.464-0.214,0.688-0.336c15.112-8.207,21.179-26.807,13.811-42.345c-3.175-6.696-8.585-12.086-15.192-15.284v-58.747
+                                c0.901,0.038,1.8,0.063,2.699,0.063c19.606,0,38.459-8.988,50.717-24.617c14.122-18.005,17.599-42.408,9.074-63.685
+                                c-1.198-2.991-3.904-5.113-7.094-5.564c-20.524-2.904-41.185,4.335-55.395,19.058V9c0-4.971-4.029-9-9-9s-9,4.029-9,9v69.531
+                                c-1.79-2.956-3.756-5.826-5.916-8.58C135.117,45.543,104.11,33.08,73.339,37.434c-3.19,0.451-5.896,2.573-7.094,5.564
+                                c-11.558,28.847-6.845,61.931,12.299,86.339c16.619,21.189,42.175,33.373,68.758,33.373c4.039,0,8.105-0.282,12.164-0.856
+                                c0.017-0.002,0.032-0.008,0.049-0.01c0.222-0.032,0.442-0.074,0.662-0.124v2.63c-4.078,0.497-8.066,1.755-11.718,3.768
+                                l-59.868,28.619l-29.054-0.025c-14.764-0.026-28.824,6.293-38.632,17.301c-8.929,10.021-13.847,22.933-13.847,36.355v28.805
+                                c0,4.49,3.31,8.293,7.757,8.914l112.091,15.634c7.032,0.981,14.061,1.468,21.06,1.468c24.17,0,47.918-5.813,69.653-17.162
+                                c7.19-3.753,14.164-8.146,20.728-13.055c14.187-10.609,27.828-22.243,40.544-34.579l10.432-10.12
+                                c5.62-5.452,8.748-12.766,8.808-20.596C298.19,201.849,295.174,194.488,289.637,188.952z M188.047,49.869
+                                c9.054-11.543,23.091-18.061,37.623-17.714c3.79,14.016,0.813,29.216-8.24,40.76c-6.391,8.148-15.271,13.773-25.049,16.266
+                                l23.043-29.38c3.068-3.911,2.384-9.568-1.527-12.636c-3.911-3.068-9.569-2.383-12.636,1.527l-23.044,29.381
+                                C178.31,67.986,181.656,58.017,188.047,49.869z M154.167,133.212l-39.721-50.644c-3.067-3.911-8.724-4.595-12.636-1.527
+                                c-3.911,3.067-4.595,8.725-1.527,12.636l39.72,50.643c-18.42-1.95-35.635-11.221-47.296-26.089
+                                c-14.093-17.97-18.329-41.869-11.544-63.516c22.643-1.428,44.842,8.376,58.935,26.345
+                                C151.76,95.929,156.664,114.858,154.167,133.212z M276.79,217.354l-10.432,10.12c-12.167,11.802-25.217,22.933-38.791,33.083
+                                c-5.793,4.333-11.942,8.207-18.278,11.514c-24.687,12.891-52.313,17.67-79.896,13.823L25.058,271.342v-20.973
+                                c0-9.001,3.298-17.66,9.287-24.381c6.385-7.167,15.55-11.275,25.149-11.275c0.009,0,0.019,0,0.028,0l31.098,0.027
+                                c0.002,0,0.005,0,0.008,0c1.343,0,2.669-0.301,3.881-0.88l61.967-29.622c0.185-0.088,0.366-0.183,0.544-0.284
+                                c3.518-1.986,7.576-2.409,11.428-1.188c3.851,1.221,6.925,3.904,8.656,7.554c3.226,6.802,0.657,14.925-5.841,18.65l-50.282,21.992
+                                c-3.903,1.707-6.075,5.917-5.203,10.088c0.872,4.171,4.549,7.158,8.81,7.158h59.726c19.079,0,37.014-7.423,50.51-20.903
+                                l26.664-25.758c4.289-4.142,11.207-4.083,15.422,0.134c2.1,2.1,3.244,4.892,3.222,7.862
+                                C280.109,212.512,278.922,215.287,276.79,217.354z" />
+                            </g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                    </svg>
+                    <h2>Nachhaltigkeit</h2>
+                    <br></br>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, quas eaque. Molestiae,
+                        exercitationem minus vel distinctio itaque molestias incidunt. Blanditiis suscipit rem quidem
+                        modi assumenda optio laborum temporibus laboriosam odit.</p>
+                </div>
+                <div class="invobox">
+                    <svg version="1.1" class="invosvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 297 297"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 297 297">
+                        <g>
+                            <path
+                                d="m266.708,115c-7.696-7.696-17.927-11.934-28.811-11.934-10.883,0-21.115,4.239-28.81,11.934-11.973,11.973-14.917,29.605-8.842,44.366l-22.957,4.591 .929,19.139 34.869-6.973c7.084,5.462 15.717,8.431 24.81,8.431 10.884,0 21.115-4.238 28.811-11.934 15.886-15.885 15.886-41.734 0.001-57.62zm-13.4,44.22c-4.116,4.117-9.589,6.384-15.41,6.384-5.821,0-11.293-2.267-15.409-6.384-8.497-8.497-8.497-22.322 0-30.82 4.116-4.116 9.588-6.383 15.409-6.383 5.821,0 11.294,2.267 15.41,6.383 8.496,8.498 8.496,22.323 0,30.82z" />
+                            <path
+                                d="m163.628,166.689l-14.939-14.939-19.731-.352-108.384,130.06c-3.137,3.765-2.886,9.301 0.579,12.767 1.841,1.841 4.268,2.775 6.702,2.775 2.147,0 4.3-0.726 6.064-2.196l130.812-109.01 .334-.067-1.437-19.038z" />
+                            <path
+                                d="m144.329,47.182c-0.533,0.48-1.058,0.975-1.571,1.488-0.021,0.021-0.041,0.044-0.062,0.065-0.03,0.03-0.058,0.061-0.088,0.092-7.598,7.678-11.784,17.842-11.784,28.653 0,9.093 2.969,17.726 8.431,24.81l-7.134,35.673 19.515-.947 4.372-21.858c4.869,2.011 10.134,3.066 15.561,3.066 10.883,0 21.115-4.239 28.81-11.934s11.934-17.927 11.934-28.81c0-10.884-4.238-21.115-11.934-28.811-8.38-8.38-19.532-12.334-30.532-11.872 0.096-0.733 0.177-1.475 0.229-2.234 0.744-10.995-3.51-21.596-12.643-31.509-3.546-3.848-9.541-4.095-13.389-0.548s-4.094,9.541-0.548,13.389c5.427,5.89 8.012,11.694 7.682,17.251-0.4,6.711-4.851,11.987-6.849,14.036zm11.69,15.041c0.296-0.262 0.682-0.614 1.14-1.058 4.107-3.63 9.25-5.467 14.409-5.467 5.58,0 11.162,2.125 15.409,6.373 4.117,4.116 6.384,9.589 6.384,15.41 0,5.821-2.267,11.293-6.383,15.409-0.001,0-0.001,0-0.001,0.001-4.116,4.116-9.588,6.383-15.409,6.383-5.821,0-11.294-2.267-15.411-6.384-4.116-4.116-6.383-9.588-6.383-15.409 0.001-5.752 2.222-11.159 6.245-15.258z" />
+                        </g>
+                    </svg>
+                    <h2>Werkzeug</h2>
+                    <br></br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem enim itaque dolores amet,
+                        adipisci culpa ex quae impedit? Neque, quasi architecto? Reprehenderit eius est, et asperiores
+                        quam illum assumenda in!</p>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <script src="./script.js"></script>
+
 </body>
 
 </html>
