--- a/index.html
+++ b/index.html
@@ -44,55 +44,9 @@
 
                 Danke für eure Unterstützung! Bis bald.
             </p>
-
-            <form name="contact" method="POST" data-netlify="true">
-                <p>
-                    <label>Your Name: <input type="text" name="name" /></label>
-                </p>
-                <p>
-                    <label>Your Email: <input type="email" name="email" /></label>
-                </p>
-                <p>
-                    <label>Your Role: <select name="role[]" multiple>
-                            <option value="leader">Leader</option>
-                            <option value="follower">Follower</option>
-                        </select></label>
-                </p>
-                <p>
-                    <label>Message: <textarea name="message"></textarea></label>
-                </p>
-                <p>
-                    <button type="submit">Send</button>
-                </p>
-            </form>
         </div>
         <div class="c">
             <div class="background-container">
-                <svg class="avedalogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20.54">
-                    <defs>
-                        <style>
-                            .a {
-                                fill: #fff
-                            }
-                        </style>
-                    </defs>
-                    <title>logo_avedaArtboard 1</title>
-                    <path class="a" d="M89.38 0l-11 19.46h3.65l7.38-13.35 6.97 13.35H100L89.38 0z" />
-                    <path class="a"
-                        d="M89.33 13.12a2 2 0 0 0-2.11 1.93 2.12 2.12 0 0 0 4.22 0 2 2 0 0 0-2.11-1.93zm-44.21-1.59h9.35V8.91h-9.35V3.57h10.67V.93H41.57v18.53h14.38V16.8H45.12v-5.27zm-17.43 2.03L20.82.93h-3.7l10.46 19.61L38.2.93h-3.46l-7.05 12.63zM0 19.44h3.68l7.35-13.36L18 19.44h3.62L11.03 0 0 19.44z" />
-                    <path class="a"
-                        d="M10.81 13.12A2 2 0 0 0 8.7 15a2 2 0 0 0 2.11 1.93A2 2 0 0 0 12.92 15a2 2 0 0 0-2.11-1.88zM66.23.93h-5.64v18.53h5.64c7.94 0 11.46-3.59 11.46-9.16S74.46.93 66.23.93zm.19 15.76h-2.2V3.7h2.19c5.87 0 8.07 2.56 8.07 6.6s-2.34 6.38-8.07 6.38z" />
-                </svg>
-                <p>
-                    AVEDA HAT ES SICH ZUM ZIEL GESETZT, SORGSAM UND RESPEKTVOLL MIT DER UMWELT UMZUGEHEN. DIESE
-                    PHILOSOPHIE KOMMT SOWOHL IN UNSEREN PRODUKTEN ALS AUCH IN UNSEREM BEMÜHEN UM DAS WOHLERGEHEN DER
-                    MITMENSCHEN ZUM AUSDRUCK. AVEDA WILL IM VERANTWORTUNGSBEWUSSTEN UMGANG MIT DER NATUR UND IHREN
-                    RESSOURCEN EINE FÜHRUNGSROLLE ÜBERNEHMEN - NICHT NUR IN DER WELT DER KOSMETIK, SONDERN AUCH ZUGUSTEN
-                    DER WELT, IN DER WIR LEBEN.
-                    <br>
-                    <br>
-                    HORST RECHELBACHER, GRÜNDER
-                </p>
             </div>
         </div>
         <div class="d">
@@ -252,6 +206,59 @@
                 </div>
             </div>
         </div>
+
+        <div class="f">
+            <div class="form-container">
+                <form name="contact" method="POST" data-netlify="true">
+                    <p>
+                        <label>Name: <input type="text" name="name" required /></label>
+                    </p>
+                    <p>
+                        <label>Email: <input type="email" name="email" /></label>
+                    </p>
+                    <p>
+                        <label>Telefon: <input type="tel" name="tel" /></label>
+                    </p>
+                    <p>
+                        <label>Nachricht: <textarea name="message"></textarea></label>
+                    </p>
+                    <p>
+                        <button type="submit">Senden</button>
+                    </p>
+                </form>
+            </div>
+        </div>
+
+        <div class="g">
+            <div class="aveda-container">
+                <svg class="avedalogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20.54">
+                    <defs>
+                        <style>
+                            .a {
+                                fill: #fff
+                            }
+                        </style>
+                    </defs>
+                    <title>logo_avedaArtboard 1</title>
+                    <path class="a" d="M89.38 0l-11 19.46h3.65l7.38-13.35 6.97 13.35H100L89.38 0z" />
+                    <path class="a"
+                        d="M89.33 13.12a2 2 0 0 0-2.11 1.93 2.12 2.12 0 0 0 4.22 0 2 2 0 0 0-2.11-1.93zm-44.21-1.59h9.35V8.91h-9.35V3.57h10.67V.93H41.57v18.53h14.38V16.8H45.12v-5.27zm-17.43 2.03L20.82.93h-3.7l10.46 19.61L38.2.93h-3.46l-7.05 12.63zM0 19.44h3.68l7.35-13.36L18 19.44h3.62L11.03 0 0 19.44z" />
+                    <path class="a"
+                        d="M10.81 13.12A2 2 0 0 0 8.7 15a2 2 0 0 0 2.11 1.93A2 2 0 0 0 12.92 15a2 2 0 0 0-2.11-1.88zM66.23.93h-5.64v18.53h5.64c7.94 0 11.46-3.59 11.46-9.16S74.46.93 66.23.93zm.19 15.76h-2.2V3.7h2.19c5.87 0 8.07 2.56 8.07 6.6s-2.34 6.38-8.07 6.38z" />
+                </svg>
+                <p>
+                    "AVEDA HAT ES SICH ZUM ZIEL GESETZT, SORGSAM UND RESPEKTVOLL MIT DER UMWELT UMZUGEHEN. DIESE
+                    PHILOSOPHIE KOMMT SOWOHL IN UNSEREN PRODUKTEN ALS AUCH IN UNSEREM BEMÜHEN UM DAS WOHLERGEHEN DER
+                    MITMENSCHEN ZUM AUSDRUCK. AVEDA WILL IM VERANTWORTUNGSBEWUSSTEN UMGANG MIT DER NATUR UND IHREN
+                    RESSOURCEN EINE FÜHRUNGSROLLE ÜBERNEHMEN - NICHT NUR IN DER WELT DER KOSMETIK, SONDERN AUCH ZUGUSTEN
+                    DER WELT, IN DER WIR LEBEN."
+                    <br>
+                    <br>
+                    HORST RECHELBACHER, GRÜNDER
+                </p>
+            </div>
+        </div>
+
     </div>
 
     <script src="./script.js"></script>
