--- a/index.html
+++ b/index.html
@@ -210,22 +210,20 @@
         <div class="f">
             <div class="form-container">
                 <form name="contact" method="POST" data-netlify="true">
-                    <p>
-                        <label>Name: <input type="text" name="name" required /></label>
-                    </p>
-                    <p>
-                        <label>Email: <input type="email" name="email" /></label>
-                    </p>
-                    <p>
-                        <label>Telefon: <input type="tel" name="tel" /></label>
-                    </p>
-                    <p>
-                        <label>Nachricht: <textarea name="message"></textarea></label>
-                    </p>
-                    <p>
-                        <button type="submit">Senden</button>
-                    </p>
+                    <div class="contact-form">
+                        <div class="input-fields">
+                            <input type="text" class="input" placeholder="Name">
+                            <input type="text" class="input" placeholder="Email Address">
+                            <input type="text" class="input" placeholder="Phone">
+                            <input type="text" class="input" placeholder="Subject">
+                        </div>
+                        <div class="msg">
+                            <textarea placeholder="Message"></textarea>
+                            <div class="btn">send</div>
+                        </div>
+                    </div>
                 </form>
+
             </div>
         </div>
 
@@ -246,22 +244,18 @@
                     <path class="a"
                         d="M10.81 13.12A2 2 0 0 0 8.7 15a2 2 0 0 0 2.11 1.93A2 2 0 0 0 12.92 15a2 2 0 0 0-2.11-1.88zM66.23.93h-5.64v18.53h5.64c7.94 0 11.46-3.59 11.46-9.16S74.46.93 66.23.93zm.19 15.76h-2.2V3.7h2.19c5.87 0 8.07 2.56 8.07 6.6s-2.34 6.38-8.07 6.38z" />
                 </svg>
-                <p>
-                    "AVEDA HAT ES SICH ZUM ZIEL GESETZT, SORGSAM UND RESPEKTVOLL MIT DER UMWELT UMZUGEHEN. DIESE
+                <br>
+                <p class="quote">
+                    AVEDA HAT ES SICH ZUM ZIEL GESETZT, SORGSAM UND RESPEKTVOLL MIT DER UMWELT UMZUGEHEN. DIESE
                     PHILOSOPHIE KOMMT SOWOHL IN UNSEREN PRODUKTEN ALS AUCH IN UNSEREM BEMÜHEN UM DAS WOHLERGEHEN DER
                     MITMENSCHEN ZUM AUSDRUCK. AVEDA WILL IM VERANTWORTUNGSBEWUSSTEN UMGANG MIT DER NATUR UND IHREN
                     RESSOURCEN EINE FÜHRUNGSROLLE ÜBERNEHMEN - NICHT NUR IN DER WELT DER KOSMETIK, SONDERN AUCH ZUGUSTEN
-                    DER WELT, IN DER WIR LEBEN."
-                    <br>
-                    <br>
-                    HORST RECHELBACHER, GRÜNDER
-                </p>
+                    DER WELT, IN DER WIR LEBEN.</p>
             </div>
+
         </div>
 
-    </div>
-
-    <script src="./script.js"></script>
+        <script src="./script.js"></script>
 
 </body>
 
