--- a/index.html
+++ b/index.html
@@ -211,19 +211,16 @@
             <div class="form-container">
                 <form name="contact" method="POST" data-netlify="true">
                     <p>
-                        <label>Your Name: <input type="text" name="name" /></label>
+                        <label>Name: <input type="text" name="name" /></label>
                     </p>
                     <p>
-                        <label>Your Email: <input type="email" name="email" /></label>
+                        <label>Email: <input type="email" name="email" /></label>
                     </p>
                     <p>
-                        <label>Your Role: <select name="role[]" multiple>
-                                <option value="leader">Leader</option>
-                                <option value="follower">Follower</option>
-                            </select></label>
+                        <label>Telefon: <input type="tel" name="tel" /></label>
                     </p>
                     <p>
-                        <label>Message: <textarea name="message"></textarea></label>
+                        <label>Nachricht: <textarea name="message"></textarea></label>
                     </p>
                     <p>
                         <button type="submit">Send</button>
