Form style update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <p></p>
                 </div>
                 <div class="contactbox">
+                    <p>info @ coiffeure-ginger.ch</p>
                     <p>044 123 123</p>
                 </div>
                 <div class="contactbox">
@@ -223,7 +224,7 @@
                         <label>Nachricht: <textarea name="message"></textarea></label>
                     </p>
                     <p>
-                        <button type="submit">Send</button>
+                        <button type="submit" class="submit">Send</button>
                     </p>
                 </form>
 
