--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p></p>
                 </div>
                 <div class="contactbox">
-                    <p>info @ coiffeure-ginger.ch</p>
+                    <p>info@coiffeure-ginger.ch</p>
                     <p>044 123 123</p>
                 </div>
                 <div class="contactbox">
@@ -211,21 +211,29 @@
         <div class="f">
             <div class="form-container">
                 <form name="contact" method="POST" data-netlify="true">
-                    <p>
-                        <label>Name: <input type="text" name="name" /></label>
-                    </p>
-                    <p>
-                        <label>Email: <input type="email" name="email" /></label>
-                    </p>
-                    <p>
-                        <label>Telefon: <input type="tel" name="tel" /></label>
-                    </p>
-                    <p>
-                        <label>Nachricht: <textarea name="message"></textarea></label>
-                    </p>
-                    <p>
-                        <button type="submit" class="submit">Senden</button>
-                    </p>
+
+                    <div class="form-left">
+                        <p>
+                            <label>Name<input type="text" name="name" /></label>
+                        </p>
+                        <p>
+                            <label>Email<input type="email" name="email" /></label>
+                        </p>
+                        <p>
+                            <label>Telefon<input type="tel" name="tel" /></label>
+                        </p>
+                    </div>
+
+                    <div class="form-right">
+                        <p>
+                            <label>Nachricht<textarea name="message" style="resize: none;"></textarea></label>
+                        </p>
+                        <p>
+                            <button type="submit" class="submit">Senden</button>
+                        </p>
+
+                    </div>
+
                 </form>
 
             </div>
@@ -250,7 +258,7 @@
                         d="M10.81 13.12A2 2 0 0 0 8.7 15a2 2 0 0 0 2.11 1.93A2 2 0 0 0 12.92 15a2 2 0 0 0-2.11-1.88zM66.23.93h-5.64v18.53h5.64c7.94 0 11.46-3.59 11.46-9.16S74.46.93 66.23.93zm.19 15.76h-2.2V3.7h2.19c5.87 0 8.07 2.56 8.07 6.6s-2.34 6.38-8.07 6.38z" />
                 </svg>
                 <br>
-                <p>Wir arbeiten auschliesslich mit Aveda Produkten</p>
+                <p>Wir arbeiten ausschliesslich mit Aveda Produkten.</p>
                 <br>
                 <div class="avedapic-container">
                     <div class="avedapic">
