--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
             <div id="map"></div>
         </div>
 
+        <span class="i">
+            <hr>
+        </span>
+
         <script src="./script.js"></script>
         <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIBOGFhNx9pYyNkHwoiu0JkG_LNEX37nE&callback=initMap">
