Further HR testings

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <span class="header-span">
+    <!-- <span class="header-span">
         <h1>COVID-19 SPAN ELEMENT</h1><span class="close">
             <h1>X</h1>
         </span>
-    </span>
+    </span> -->
 
     <div class="container">
         <div class="a">
@@ -289,7 +289,7 @@
         </div>
 
         <span class="i">
-            <hr>
+            <hr class="fineline">
         </span>
 
         <script src="./script.js"></script>
