--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mediaquery.css">
     <title>Coiffreur Ginger</title>
 </head>
 
 <body>
 
-    <!-- <span class="header-span">
+    <span class="header-span">
         <h1>COVID-19 SPAN ELEMENT</h1><span class="close">
             <h1>X</h1>
         </span>
-    </span> -->
+    </span>
 
     <div class="container">
         <div class="a">
@@ -113,7 +114,7 @@
                         <g>
                         </g>
                     </svg>
-                    <h2>Inhaltsstoffe</h2>
+                    <h2>INHALTSSTOFFE</h2>
                     <br></br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugiat accusamus nisi amet.
                         Laudantium, minima quos officia porro repudiandae similique, aperiam beatae debitis ullam et
@@ -183,7 +184,7 @@
                         <g>
                         </g>
                     </svg>
-                    <h2>Nachhaltigkeit</h2>
+                    <h2>NACHHALTIGKEIT</h2>
                     <br></br>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, quas eaque. Molestiae,
                         exercitationem minus vel distinctio itaque molestias incidunt. Blanditiis suscipit rem quidem
@@ -201,7 +202,7 @@
                                 d="m144.329,47.182c-0.533,0.48-1.058,0.975-1.571,1.488-0.021,0.021-0.041,0.044-0.062,0.065-0.03,0.03-0.058,0.061-0.088,0.092-7.598,7.678-11.784,17.842-11.784,28.653 0,9.093 2.969,17.726 8.431,24.81l-7.134,35.673 19.515-.947 4.372-21.858c4.869,2.011 10.134,3.066 15.561,3.066 10.883,0 21.115-4.239 28.81-11.934s11.934-17.927 11.934-28.81c0-10.884-4.238-21.115-11.934-28.811-8.38-8.38-19.532-12.334-30.532-11.872 0.096-0.733 0.177-1.475 0.229-2.234 0.744-10.995-3.51-21.596-12.643-31.509-3.546-3.848-9.541-4.095-13.389-0.548s-4.094,9.541-0.548,13.389c5.427,5.89 8.012,11.694 7.682,17.251-0.4,6.711-4.851,11.987-6.849,14.036zm11.69,15.041c0.296-0.262 0.682-0.614 1.14-1.058 4.107-3.63 9.25-5.467 14.409-5.467 5.58,0 11.162,2.125 15.409,6.373 4.117,4.116 6.384,9.589 6.384,15.41 0,5.821-2.267,11.293-6.383,15.409-0.001,0-0.001,0-0.001,0.001-4.116,4.116-9.588,6.383-15.409,6.383-5.821,0-11.294-2.267-15.411-6.384-4.116-4.116-6.383-9.588-6.383-15.409 0.001-5.752 2.222-11.159 6.245-15.258z" />
                         </g>
                     </svg>
-                    <h2>Werkzeug</h2>
+                    <h2>WERKZEUG</h2>
                     <br></br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem enim itaque dolores amet,
                         adipisci culpa ex quae impedit? Neque, quasi architecto? Reprehenderit eius est, et asperiores
