--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <span class="header-span">
+    <!-- <span class="header-span">
         <h1>COVID-19 SPAN ELEMENT</h1><span class="close">
             <h1>X</h1>
         </span>
-    </span>
+    </span> -->
 
     <div class="container">
         <div class="a">
